[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Alien_lines_1.9.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/AlteHaasGroteskRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Scenes/CreateGame.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="CreateGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_right = 1240.0
margin_bottom = 680.0

[node name="GameName" type="Label" parent="MainContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "THE ALIEN"

[node name="Separator" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 1240.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 40 )

[node name="Toolbar" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1240.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 2

[node name="Title" type="Label" parent="MainContainer/VBoxContainer/Toolbar"]
margin_top = 7.0
margin_right = 992.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "CREATE YOUR GAME"

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/Toolbar"]
margin_left = 996.0
margin_right = 1240.0
margin_bottom = 40.0
alignment = 2

[node name="BackButton" type="Button" parent="MainContainer/VBoxContainer/Toolbar/HBoxContainer"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Back"

[node name="StartGameButton" type="Button" parent="MainContainer/VBoxContainer/Toolbar/HBoxContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Start Game"

[node name="Separator2" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 1240.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 40 )

[node name="CreateGame" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 1240.0
margin_bottom = 338.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MainContainer/VBoxContainer/CreateGame"]
margin_right = 1240.0
margin_bottom = 140.0
columns = 3

[node name="GameNameInput" type="LineEdit" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_right = 516.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Username Game"

[node name="Separator3" type="MarginContainer" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_left = 520.0
margin_right = 720.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="OptionButton" type="OptionButton" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_left = 724.0
margin_right = 1240.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Random map"

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_top = 28.0
margin_right = 516.0
margin_bottom = 68.0

[node name="OptionButton" type="OptionButton" parent="MainContainer/VBoxContainer/CreateGame/GridContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 470.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Find the Alien"

[node name="ToolButton" type="ToolButton" parent="MainContainer/VBoxContainer/CreateGame/GridContainer/HBoxContainer"]
margin_left = 474.0
margin_right = 516.0
margin_bottom = 40.0
text = "Help"

[node name="Separator4" type="MarginContainer" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_left = 520.0
margin_top = 28.0
margin_right = 720.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 0 )

[node name="CheckButton" type="CheckButton" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_left = 724.0
margin_top = 28.0
margin_right = 1240.0
margin_bottom = 68.0
pressed = true
text = "Enable map rotation"

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/CreateGame/GridContainer"]
margin_top = 72.0
margin_right = 516.0
margin_bottom = 140.0

[node name="SpinBox" type="SpinBox" parent="MainContainer/VBoxContainer/CreateGame/GridContainer/VBoxContainer"]
margin_right = 516.0
margin_bottom = 24.0
min_value = 4.0
max_value = 40.0
value = 10.0
suffix = "Players"

[node name="CheckButton" type="CheckButton" parent="MainContainer/VBoxContainer/CreateGame/GridContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 516.0
margin_bottom = 68.0
text = "Password protected"

[node name="LineEdit" type="LineEdit" parent="MainContainer/VBoxContainer/CreateGame/GridContainer/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 516.0
margin_bottom = 96.0
text = "Password"
[connection signal="pressed" from="MainContainer/VBoxContainer/Toolbar/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainContainer/VBoxContainer/Toolbar/HBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
